[package]
name = "traffic_cone"
version = "0.1.0"
edition = "2024"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "traffic_cone"
path = "src/main.rs"

[dependencies]
clap = {version = "=4.5.40", default-features = true, features = ["derive"]}
derive-getters = "0.5.0"
inquire = "0.7.5"
log = "0.4.27"
reqwest = { version = "0.12.23", default-features = true, features = ["blocking"] }
serde = {version = "1.0.219", default-features = true, features = ["derive"]}
serde_json = "1.0.143"
