[package]
name = "traffic_cone"
version = "0.2.0-dev"
edition = "2024"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "traffic_cone"
path = "src/main.rs"

[dependencies]
clap = {version = "=4.5.40", default-features = true, features = ["derive"]}
derive-getters = "0.5.0"
reqwest = { version = "0.12.23", default-features = true, features = ["blocking"] }
serde_json = "1.0.143"
